--- a/buyusedcar.html
+++ b/buyusedcar.html
@@ -118,7 +118,7 @@
 		<h1>How it works?<br><hr></h1>
 		<div class="trigger1">
 			<div class="trigger2">
-				<img src="images/svg44.svg">
+				<img src="svg44.svg">
 				<div><h2>TOP QUALITY BIKES</h2><br><br>
 					<p class="wamp">All our bikes are as good as new! They are handpicked and refurbished by our experts to meet the highest quality standards.</p>
 				</div>
